--- a/footer.html
+++ b/footer.html
@@ -160,7 +160,7 @@
         color: var(--footer-link);
         text-decoration: none;
         font-size: 14px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         transition: color 0.2s;
       }
       .footer-link:hover,
@@ -486,7 +486,7 @@
           font-size: 14px;
           display: flex;
           flex-direction: column;
-          gap: 20px;
+          
         }
       }
 
@@ -527,6 +527,10 @@
           display: none;
           padding: 0 0 16px 0;
           background: none;
+        }
+
+        .footer-link {
+              line-height: 18px;
         }
 
         .footer-section {
